# openauto

./: .gitignore  CLAUDE.md  CMakeLists.txt  MIGRATION_PLAN.md  README.md  RELEASE.txt  Readme.md  qml.qrc
assets/: JourneyOS.qrc  journey.qrc  stylesheet.qss
assets/canbus/: wmi_table.json
assets/qml/: UpdateOverlay.qml
cmake_modules/: FindFFMPEG.cmake  Findblkid.cmake  Findgps.cmake  Findtaglib.cmake  gitversion.cmake  qmlcomponents.cmake
doc/: androidauto.lua  apserver.c  destaticizer.py  huig13_cache.html  index.html  protos.proto  readme.md  ssl_preload.cpp
include/f1x/openauto/Common/: Log.hpp
include/f1x/openauto/Common/Enum/: AndroidAutoAudioFocusState.hpp  AndroidAutoConnectivityMethod.hpp  AndroidAutoConnectivityState.hpp  AudioOutputType.hpp  BluetoothConnectionStatus.hpp  VideoType.hpp  WirelessType.hpp
include/f1x/openauto/autoapp/: App.hpp  ProjectionManager.hpp
include/f1x/openauto/autoapp/Bootstrap/: AndroidBluetoothServer.hpp  AndroidBluetoothService.hpp  IAndroidBluetoothServer.hpp  IAndroidBluetoothService.hpp
include/f1x/openauto/autoapp/Configuration/: AudioOutputBackendType.hpp  BluetoothAdapterType.hpp  Configuration.hpp  ConfigurationGroup.hpp  ConfigurationGroupNames.hpp  ConfigurationKeys.hpp  ConfigurationSetting.hpp  HandednessOfTrafficType.hpp  IConfiguration.hpp  IRecentAddressesList.hpp  RecentAddressesList.hpp
include/f1x/openauto/autoapp/Hardware/: HardwareProfile.hpp
include/f1x/openauto/autoapp/Projection/: DummyBluetoothDevice.hpp  IAudioInput.hpp  IAudioOutput.hpp  IBluetoothDevice.hpp  IInputDevice.hpp  IInputDeviceEventHandler.hpp  IVideoOutput.hpp  InputDevice.hpp  InputEvent.hpp  LocalBluetoothDevice.hpp  (+7 more)
include/f1x/openauto/btservice/: AndroidBluetoothServer.hpp  AndroidBluetoothService.hpp  BluetoothHandler.hpp  IAndroidBluetoothServer.hpp  IAndroidBluetoothService.hpp  IBluetoothHandler.hpp
src/: QM L Errors
src/autoapp/: App.cpp  ProjectionManager.cpp  autoapp.cpp  main.cpp
src/autoapp/Bootstrap/: AndroidBluetoothServer.cpp  AndroidBluetoothService.cpp
src/autoapp/Configuration/: Configuration.cpp  ConfigurationGroup.cpp  ConfigurationSetting.cpp  RecentAddressesList.cpp
src/autoapp/Hardware/: HardwareProfile.cpp
src/autoapp/Hardware/Detect/: HardwareDetector.cpp  QtHardwareDetector.cpp  RpiHardwareDetector.cpp  main.cpp
src/autoapp/Projection/: DummyBluetoothDevice.cpp  InputDevice.cpp  LocalBluetoothDevice.cpp  OMXVideoOutput.cpp  QtAudioInput.cpp  QtAudioOutput.cpp  QtVideoOutput.cpp  RtAudioOutput.cpp  SequentialBuffer.cpp  VideoOutput.cpp
src/autoapp/Service/: AndroidAutoEntity.cpp  AndroidAutoEntityFactory.cpp  AndroidAutoSession.cpp  CanBusInputAdapter.cpp  CarConnect.cpp  InputService.cpp  MappingLibraryService.cpp  Pinger.cpp  SensorService.cpp  ServiceFactory.cpp  SessionFactory.cpp  VinDecodeService.cpp
src/autoapp/Service/Bluetooth/: BluetoothService.cpp
src/autoapp/Service/GenericNotification/: GenericNotificationService.cpp
src/autoapp/Service/InputSource/: InputSourceService.cpp
src/autoapp/Service/MediaBrowser/: MediaBrowserService.cpp
src/autoapp/Service/MediaPlaybackStatus/: MediaPlaybackStatusService.cpp
src/autoapp/Service/MediaSink/: AudioMediaSinkService.cpp  GuidanceAudioService.cpp  MediaAudioService.cpp  SystemAudioService.cpp  TelephonyAudioService.cpp  VideoMediaSinkService.cpp  VideoService.cpp
src/autoapp/Service/MediaSource/: MediaSourceService.cpp  MicrophoneMediaSourceService.cpp
src/autoapp/Service/NavigationStatus/: NavigationStatusService.cpp
src/autoapp/Service/PhoneStatus/: PhoneStatusService.cpp
src/autoapp/Service/Radio/: RadioService.cpp
src/autoapp/Service/Sensor/: CanBusSensorBridge.cpp  SensorService.cpp
src/autoapp/Service/VendorExtension/: VendorExtensionService.cpp
src/autoapp/Service/WifiProjection/: WifiProjectionService.cpp
src/autoapp/UI/: AndroidAutoMonitor.cpp  BluetoothAdapterModel.cpp  BluetoothAdapterModelItem.cpp  BluetoothAgent.cpp  BluetoothDeviceModel.cpp  BluetoothHandler.cpp  BluetoothManager.cpp  BluetoothManager2.cpp  BluetoothMonitor.cpp  BluetoothPopup.cpp  BrightnessHandler.cpp  ComboBoxItem.cpp  ComboBoxModel.cpp  DriverPositionModel.cpp  DriverPositionModelItem.cpp  EvConnectorTypeModel.cpp  FrameRateItem.cpp  FrameRateModel.cpp  FuelTypeModel.cpp  FuelTypeModelItem.cpp  FuelTypeitem.cpp  HeadUnit.cpp  HeadUnit.qml  LightHandler.cpp  MainWindow.cpp  MonitorWindow.cpp  OptionCheckboxModel.cpp  OptionRadioModel.cpp  OptionTextModel.cpp  PulseAudioDevice.cpp  PulseAudioDeviceModel.cpp  PulseAudioHandler.cpp  ResolutionModel.cpp  SettingsDelegate.qml  SettingsList.qml  SettingsModel.cpp  SettingsPage.qml  SettingsView.cpp  SettingsWindow.cpp  UpdateManager.cpp  (+9 more)
src/autoapp/UI/Agent/: BluetoothAgent.cpp
src/autoapp/UI/Combo/: AudioDeviceModel.cpp  AudioDeviceModelItem.cpp  BluetoothAdapterModel.cpp  BluetoothAdapterModelItem.cpp  BluetoothDeviceModel.cpp  BluetoothDeviceModelItem.cpp  DriverPositionModel.cpp  DriverPositionModelItem.cpp  EvConnectorTypeModel.cpp  EvConnectorTypeModelItem.cpp  FrameRateModel.cpp  FrameRateModelItem.cpp  FuelTypeModel.cpp  FuelTypeModelItem.cpp  NetworkAdapterModel.cpp  NetworkAdapterModelItem.cpp  PulseAudioDeviceModel.cpp  PulseAudioDeviceModelItem.cpp  ResolutionModel.cpp  ResolutionModelItem.cpp
src/autoapp/UI/Controller/: LightController.cpp  PowerController.cpp  TimeController.cpp  WifiController.cpp
src/autoapp/UI/JourneyOS/: CMakeLists.txt  JourneyOS.qmlproject  JourneyOS.qmlproject.qtds  JourneyOS.qmlrc  JourneyOS.qrc  qds.cmake  temp.qrc
src/autoapp/UI/Manager/: UpdateManager.cpp
src/autoapp/UI/Monitor/: AndroidAutoMonitor.cpp  BluetoothHandler.cpp  BrightnessHandler.cpp  CoreAudioHandler.cpp  LightHandler.cpp  LinuxBluetoothManager.cpp  PulseAudioHandler.cpp  VolumeHandler.cpp  WifiMonitor.cpp
src/autoapp/UI/ViewModel/: BrightnessViewModel.cpp  SettingsViewModel.cpp  VolumeViewModel.cpp  WifiViewModel.cpp
src/autoapp/cubeone/: carconnect.cpp
src/btservice/: AndroidBluetoothServer.cpp  AndroidBluetoothService.cpp  BluetoothHandler.cpp  btservice.cpp
(+259 files in other folders)
